--- a/acad.html
+++ b/acad.html
@@ -60,28 +60,28 @@
         <a href="https://docs.google.com/document/d/1X7XiXeYdrTARiPd92ZCnbRBSuJyYA6OU/edit?usp=drivesdk&ouid=107580281133914591594&rtpof=true&sd=true" target="_blank">
           <img src="images/acad1.jpg" alt="Academic Paper 1">
         </a>
-        <h3>Paper 1: Service Marketing Research</h3>
+        <h3>Paper 1: Strategic Marketing Research</h3>
       </div>
 
       <div class="gallery-item" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200">
         <a href="https://drive.google.com/file/d/1L358LAefus5Vrzz8Xhb3SznZF38DsdAi/view?usp=drivesdk" target="_blank">
           <img src="images/acad2.jpg" alt="Academic Paper 2">
         </a>
-        <h3>Paper 2: Scale Model Study</h3>
+        <h3>Paper 2: Franchising Plan</h3>
       </div>
 
       <div class="gallery-item" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="400">
         <a href="https://docs.google.com/document/d/1X7XiXeYdrTARiPd92ZCnbRBSuJyYA6OU/edit?usp=drivesdk&ouid=107580281133914591594&rtpof=true&sd=true" target="_blank">
           <img src="images/acad3.jpg" alt="Academic Paper 3">
         </a>
-        <h3>Paper 3: Consumer Behavior Analysis</h3>
+        <h3>Paper 3: Business Plan</h3>
       </div>
 
       <div class="gallery-item" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600">
         <a href="https://drive.google.com/file/d/14mI6IECQ5SY9KybA26YiJDNTk9N_ZFvT/view?usp=drivesdk" target="_blank">
           <img src="images/acad4.jpg" alt="Academic Paper 4">
         </a>
-        <h3>Paper 4: Culminating Project</h3>
+        <h3>Paper 4: Event Portfolio</h3>
       </div>
     </div>
   </div>
